# MetazionTest

./: .gitignore  README
NetClient/: CMakeLists.txt
NetClient/Source/: CMakeLists.txt  ServerApp.cpp  Sockets.cpp  Sockets.hpp
NetServer/: CMakeLists.txt
NetServer/Source/: ServerApp.cpp  ServerApp.hpp  Sockets.cpp  Sockets.hpp
